--- a/src/main/resources/views/createGame.fxml
+++ b/src/main/resources/views/createGame.fxml
@@ -56,7 +56,7 @@
                         <Insets left="100.0" />
                      </GridPane.margin>
                             </Button>
-                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Scrabble Teammembers:" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Scrabble Players:" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                 <font>
                                     <Font name="Chalkboard" size="24.0" />
                                 </font>
