--- a/src/main/resources/views/dictionaryError.fxml
+++ b/src/main/resources/views/dictionaryError.fxml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="137.0" prefWidth="182.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ErrorMessageController">
+<AnchorPane prefHeight="137.0" prefWidth="182.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.DictionaryErrorMessageController">
    <children>
       <VBox prefHeight="169.0" prefWidth="183.0" style="-fx-background-color: #fbf8da #fbf8da #fbf8da #fbf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong IP">
+            <Button alignment="TOP_RIGHT" mnemonicParsing="false" onMouseClicked="#closeError" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="X">
+               <VBox.margin>
+                  <Insets left="160.0" top="10.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Chalkboard" size="18.0" />
+               </font>
+            </Button>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Invalid Dictionary">
                <font>
                   <Font name="Chalkboard" size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets left="40.0" top="15.0" />
+                  <Insets left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
             </Text>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Entered.">
@@ -23,7 +32,7 @@
                   <Font name="Chalkboard" size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets left="45.0" />
+                  <Insets left="60.0" />
                </VBox.margin>
             </Text>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Retry Please.">
@@ -31,7 +40,7 @@
                   <Font name="Chalkboard" size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets left="20.0" top="20.0" />
+                  <Insets bottom="10.0" left="40.0" top="20.0" />
                </VBox.margin>
             </Text>
          </children>
