--- a/src/main/resources/views/pregameAgreement.fxml
+++ b/src/main/resources/views/pregameAgreement.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -32,7 +32,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Dictionary Agreement Vote:" wrappingWidth="142.8309326171875">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="I consent with the dictionary" wrappingWidth="142.8309326171875">
                <font>
                   <Font name="Chalkboard" size="24.0" />
                </font>
@@ -42,11 +42,11 @@
             </Text>
             <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                <children>
-                  <TextArea fx:id="dictionary" prefHeight="33.0" prefWidth="149.0">
+                  <TextField prefHeight="37.0" prefWidth="169.0">
                      <VBox.margin>
-                        <Insets right="20.0" top="20.0" />
+                        <Insets right="10.0" top="10.0" />
                      </VBox.margin>
-                  </TextArea>
+                  </TextField>
                   <CheckBox fx:id="dictionaryAgree" mnemonicParsing="false" onMouseClicked="#setDictionaryAgreement" text="I agree">
                      <font>
                         <Font name="Chalkboard" size="18.0" />
