--- a/src/main/resources/views/joinGameView.fxml
+++ b/src/main/resources/views/joinGameView.fxml
@@ -32,22 +32,25 @@
             <center>
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#gameView" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Wating to join Game..." textAlignment="CENTER">
-                            <VBox.margin>
-                                <Insets />
-                            </VBox.margin>
-                            <font>
-                                <Font name="Chalkboard" size="24.0" />
-                            </font>
-                        </Button>
                   <HBox prefHeight="100.0" prefWidth="802.0">
                      <children>
+                        <Label prefHeight="61.0" prefWidth="91.0" styleClass="tileBottom" stylesheets="@../stylesheets/labelstyle.css" text="Enter IP:">
+                           <font>
+                              <Font name="Chalkboard" size="24.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets right="10.0" top="20.0" />
+                           </HBox.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                        </Label>
                         <TextField fx:id="ipField" prefHeight="62.0" prefWidth="230.0">
                            <HBox.margin>
                               <Insets right="10.0" top="20.0" />
                            </HBox.margin>
                         </TextField>
-                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#checkEnterIP" prefHeight="63.0" prefWidth="157.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Enter IP">
+                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#gameView" prefHeight="63.0" prefWidth="169.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="JOIN">
                                   <font>
                                       <Font name="Chalkboard" size="24.0" />
                                   </font>
@@ -60,11 +63,17 @@
                         <Insets left="350.0" right="200.0" />
                      </VBox.margin>
                   </HBox>
-                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#gameView" prefHeight="100.0" prefWidth="169.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="JOIN">
-                            <font>
-                                <Font name="Chalkboard" size="24.0" />
-                            </font>
-                        </Button>
+                  <Label prefHeight="37.0" prefWidth="382.0" styleClass="tileBottom" stylesheets="@../stylesheets/labelstyle.css" text="Ask the Host for their IP to join the game!">
+                     <font>
+                        <Font name="Chalkboard" size="24.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="50.0" />
+                     </VBox.margin>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </Label>
                     </children>
                     <BorderPane.margin>
                         <Insets bottom="30.0" left="30.0" right="30.0" top="50.0" />
