--- a/src/main/resources/views/gameSettings.fxml
+++ b/src/main/resources/views/gameSettings.fxml
@@ -1,33 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.gameSettingsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="761.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.gameSettingsController">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="Game Settings" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
                 <Font name="Chalkboard" size="48.0" />
             </font>
         </Label>
-        <Label layoutX="278.0" layoutY="331.0" prefHeight="100.0" style="-fx-background-color: #fdf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-        <Button mnemonicParsing="false" onMouseClicked="#backToCreateGame" prefHeight="37.0" prefWidth="212.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Back To Create Game " textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
-            <font>
-                <Font name="Chalkboard" size="18.0" />
-            </font>
-        </Button>
-        <Button layoutX="990.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#exitGame" prefHeight="35.0" prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="EXIT" textAlignment="CENTER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
-            <font>
-                <Font name="Chalkboard" size="18.0" />
-            </font>
-        </Button>
+        <Label layoutX="278.0" layoutY="331.0" prefHeight="100.0" prefWidth="1152.0" style="-fx-background-color: #fdf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <VBox layoutX="335.0" layoutY="161.0" prefHeight="328.0" prefWidth="483.0" AnchorPane.bottomAnchor="211.0" AnchorPane.leftAnchor="335.0" AnchorPane.rightAnchor="334.0" AnchorPane.topAnchor="161.0">
          <children>
             <HBox prefHeight="81.0" prefWidth="483.0">
@@ -144,12 +129,12 @@
                         <Font name="Chalkboard" size="24.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="80.0" top="10.0" />
+                        <Insets left="60.0" top="10.0" />
                      </HBox.margin>
                   </Text>
                </children>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox maxWidth="-Infinity" prefHeight="51.0" prefWidth="357.0">
                <children>
                   <TextField fx:id="dictionary" prefHeight="27.0" prefWidth="197.0">
                      <HBox.margin>
@@ -169,7 +154,7 @@
                         <Font name="Chalkboard" size="18.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="50.0" top="10.0" />
+                        <Insets left="100.0" top="10.0" />
                      </HBox.margin>
                   </Button>
                   <TextField fx:id="joker" prefHeight="27.0" prefWidth="27.0" text="2">
