--- a/src/main/resources/views/gameViewNew.fxml
+++ b/src/main/resources/views/gameViewNew.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.GameViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.GameViewController">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="SCRABBLE" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
@@ -236,120 +236,45 @@
             </VBox>
          </right>
          <center>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-               <children>
-                  <GridPane fx:id="board" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="514.0" prefWidth="546.0" style="-fx-background-color: #c4c4c4; -fx-background-radius: 10; -fx-border-color: #c4c4c4; -fx-border-width: 5; -fx-border-radius: 10;">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                  </GridPane>
-                  <AnchorPane fx:id="agreements" prefHeight="517.0" prefWidth="551.0">
-                     <children>
-                        <VBox layoutX="71.0" layoutY="175.0" prefHeight="298.0" prefWidth="411.0">
-                           <children>
-                              <Button fx:id="dictionary" mnemonicParsing="false" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Dictionary">
-                                 <font>
-                                    <Font name="Chalkboard" size="24.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets left="130.0" />
-                                 </VBox.margin>
-                              </Button>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="I am ready ">
-                                 <font>
-                                    <Font name="Chalkboard" size="24.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets left="140.0" top="30.0" />
-                                 </VBox.margin>
-                              </Text>
-                              <CheckBox fx:id="ready" mnemonicParsing="false">
-                                 <font>
-                                    <Font name="Chalkboard" size="24.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets left="180.0" />
-                                 </VBox.margin>
-                              </CheckBox>
-                              <Label prefHeight="51.0" prefWidth="303.0" styleClass="tileBottom" stylesheets="@../stylesheets/labelstyle.css" text="By clicking ready I agree with the ">
-                                 <font>
-                                    <Font name="Chalkboard" size="24.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets left="50.0" top="10.0" />
-                                 </VBox.margin>
-                                 <padding>
-                                    <Insets left="5.0" />
-                                 </padding>
-                              </Label>
-                              <Label prefHeight="50.0" prefWidth="343.0" styleClass="tileBottom" stylesheets="@../stylesheets/labelstyle.css" text="Tile Distribution, Tile Value &amp; Dictionary">
-                                 <font>
-                                    <Font name="Chalkboard" size="24.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets left="30.0" top="10.0" />
-                                 </VBox.margin>
-                                 <padding>
-                                    <Insets left="5.0" />
-                                 </padding>
-                              </Label>
-                           </children>
-                        </VBox>
-                     </children>
-                  </AnchorPane>
-                  <HBox prefHeight="167.0" prefWidth="552.0">
-                     <children>
-                        <Button fx:id="distribution" mnemonicParsing="false" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Tile Distribution">
-                           <font>
-                              <Font name="Chalkboard" size="24.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="50.0" top="70.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="values" mnemonicParsing="false" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Tile Values">
-                           <font>
-                              <Font name="Chalkboard" size="24.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="70.0" top="70.0" />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                  </HBox>
-               </children>
-            </AnchorPane>
+            <GridPane fx:id="board" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="514.0" prefWidth="546.0" style="-fx-background-color: #c4c4c4; -fx-background-radius: 10; -fx-border-color: #c4c4c4; -fx-border-width: 5; -fx-border-radius: 10;" BorderPane.alignment="CENTER">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <BorderPane.margin>
+                  <Insets bottom="30.0" left="40.0" right="40.0" top="30.0" />
+               </BorderPane.margin>
+            </GridPane>
          </center>
         </BorderPane>
         <BorderPane prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
@@ -406,6 +331,91 @@
             </GridPane>
          </center>
         </BorderPane>
-      <AnchorPane layoutX="110.0" layoutY="823.0" prefHeight="200.0" prefWidth="200.0" />
+      <BorderPane fx:id="agreement" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
+         <left>
+            <VBox prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER" />
+         </left>
+         <right>
+            <VBox prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER" />
+         </right>
+         <center>
+            <VBox alignment="CENTER" prefHeight="298.0" prefWidth="411.0" styleClass="agreementStyle" stylesheets="@../stylesheets/agreement.css" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" spacing="30.0">
+                     <children>
+                        <Button fx:id="distribution" mnemonicParsing="false" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Tile Distribution">
+                           <font>
+                              <Font name="Chalkboard" size="24.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="values" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Tile Values">
+                           <font>
+                              <Font name="Chalkboard" size="24.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets right="20.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <Button fx:id="dictionary" mnemonicParsing="false" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Dictionary">
+                     <font>
+                        <Font name="Chalkboard" size="24.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="I am ready ">
+                     <font>
+                        <Font name="Chalkboard" size="24.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="40.0" />
+                     </VBox.margin>
+                  </Text>
+                  <CheckBox fx:id="ready" mnemonicParsing="false">
+                     <font>
+                        <Font name="Chalkboard" size="24.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </CheckBox>
+                  <Label prefHeight="51.0" prefWidth="303.0" styleClass="tileBottom" stylesheets="@../stylesheets/labelstyle.css" text="By clicking ready I agree with the ">
+                     <font>
+                        <Font name="Chalkboard" size="24.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding>
+                  </Label>
+                  <Label prefHeight="50.0" prefWidth="343.0" styleClass="tileBottom" stylesheets="@../stylesheets/labelstyle.css" text="Tile Distribution, Tile Value &amp; Dictionary">
+                     <font>
+                        <Font name="Chalkboard" size="24.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding>
+                  </Label>
+               </children>
+               <BorderPane.margin>
+                  <Insets bottom="30.0" left="40.0" right="40.0" top="30.0" />
+               </BorderPane.margin>
+            </VBox>
+         </center>
+      </BorderPane>
     </children>
 </AnchorPane>
