--- a/src/main/resources/views/gameSettings.fxml
+++ b/src/main/resources/views/gameSettings.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.gameSettingsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.gameSettingsController">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="Game Settings" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
@@ -141,19 +141,19 @@
             </HBox>
             <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
                <children>
-                  <TextField fx:id="dictionary" prefHeight="27.0" prefWidth="197.0">
+                  <Button mnemonicParsing="false" onMouseClicked="#selectDictionary" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Select">
                      <HBox.margin>
-                        <Insets top="10.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <Button mnemonicParsing="false" onMouseClicked="#setDictionary" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Set">
-                     <HBox.margin>
-                        <Insets right="150.0" top="10.0" />
+                        <Insets right="10.0" top="10.0" />
                      </HBox.margin>
                      <font>
                         <Font name="Chalkboard" size="18.0" />
                      </font>
                   </Button>
+                  <Label fx:id="dictionary" prefHeight="37.0" prefWidth="282.0" styleClass="tileBottom" stylesheets="@../stylesheets/labelstyle.css">
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
+                  </Label>
                   <Button mnemonicParsing="false" onMouseClicked="#decreaseJoker" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="-">
                      <font>
                         <Font name="Chalkboard" size="18.0" />
